<resources>
    <string name="app_name">project3</string>
    <string name="todo">TODO</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="doesn_t_have_an_account">doesn\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="art_your_dreams_with_colors">Art Your Dreams With Colors</string>
    <string name="login_signup">Login / SignUp</string>
</resources>