<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/gradient"
        android:paddingStart="20sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:hint="@string/email"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="281dp"
        android:background="@drawable/gradient"
        android:paddingStart="20sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:hint="@string/password"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/gradient"
        android:text="@string/sign_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="146dp"
        android:background="@drawable/gradient"
        android:paddingStart="20sp"
        android:paddingTop="5sp"
        android:paddingEnd="5sp"
        android:paddingBottom="10sp"
        android:text="@string/doesn_t_have_an_account"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/gradient"
        android:text="@string/sign_up" />

</RelativeLayout>