<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/back3">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        android:layout_above="@+id/Fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="9dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#949EF4"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/Fullname"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="462dp"
        android:background="@drawable/btn_shape"
        android:hint="@string/full_name"
        android:paddingStart="15sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:textColor="#4D047A"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="423dp"
        android:background="@drawable/btn_shape"
        android:hint="@string/email"
        android:paddingStart="15sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:textColor="#4D047A"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Mobile_number"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/btn_shape"
        android:hint="@string/mobile_number"
        android:paddingStart="15sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:textColor="#4D047A"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-168dp"
        android:paddingStart="20sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:hint="@string/email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/btn_shape"
        android:hint="@string/password"
        android:paddingStart="15sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:textColor="#4D047A"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="297dp"
        android:background="@drawable/btn_shape"
        android:hint="@string/confirm_password"
        android:paddingStart="15sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text=""
        android:textColor="#4D047A"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="253dp"
        android:text=""
        android:hint="@string/terms_and_conditions"
        android:textColor="#263475"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/gradient2"
        android:padding="3dp"
        android:text="@string/sign_up"
        android:textColor="#4553CA"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signin"
        android:layout_width="262dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="147dp"
        android:background="@drawable/btn_shape"
        android:padding="3dp"
        android:text="@string/already_have_an_account"
        android:textColor="#949EF4"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>